<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/textReigon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:scrollbars="none"
                android:text="@string/author"
                android:textSize="18sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/rcdWindow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:maxLines="1000"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/inputWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="bottom|end"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:textSize="64sp"
                android:verticalScrollbarPosition="defaultPosition"
                app:layout_constrainedWidth="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/keyReigon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/line1"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn1"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn2"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn3"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnAdd"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnAdd"
                    android:textColor="#FF9800"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn4"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn5"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn6"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnMinus"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnMinus"
                    android:textColor="#FF9800"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn7"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn8"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn9"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnMulti"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnMulti"
                    android:textColor="#FF9800"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnDot"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnDot"
                    android:textColor="#FF5722"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn0"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn0"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnEqual"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnEqual"
                    android:textColor="#FF5722"
                    android:textColorHighlight="#FFFFFF"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnDivide"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnDivide"
                    android:textColor="#FF9800"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />
            </TableRow>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>